# NeonSearch

./: .gitignore  ARCHITECTURE.md  BUILD_SYSTEM.md  CUSTOM_PAGES_DESIGN.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  DOWNLOADS_FEATURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASE_NOTES_v0.3.0.md  build  build.bat  build.sh  build_old.sh  dependencies.bat  dependencies.sh  run  run.bat  run.sh  setup  test_dom.html  test_large_sites.md  test_page.html
src/: main.rs
src/engine/: adaptive_renderer.rs  background_processor.rs  content_analyzer.rs  css_parser.rs  dom.rs  download_manager.rs  html_parser.rs  layout.rs  mod.rs  renderer.rs  streaming_parser.rs  virtual_scroll.rs
src/js/: console.rs  dom_api.rs  event_system.rs  mod.rs  test.rs
src/networking/: cookie_manager.rs  http_client.rs  image_loader.rs  manual_client.rs  mod.rs  performance.rs  streaming_compression.rs  temp_storage.rs  url_parser.rs
src/pages/: mod.rs
src/pages/pages/: about.rs  bookmarks.rs  developer.rs  downloads.rs  experiments.rs  extensions.rs  history.rs  mod.rs  performance.rs  security.rs  settings.rs
src/security/: csp.rs  download_validator.rs  https_validator.rs  mod.rs  sandbox.rs
src/storage/: downloads_db.rs  mod.rs
src/ui/: address_bar.rs  bookmarks.rs  browser_tab.rs  dev_console.rs  error_handler.rs  icons.rs  mod.rs  navigation.rs  theme.rs
